--- a/config.yaml
+++ b/config.yaml
@@ -8,11 +8,9 @@
 # important: slider indexes start at 0, regardless of which analog pins you're using!
 slider_mapping:
   0: master
-  1: chrome.exe
+  1: deej.current
   2: spotify.exe
-  3:
-    - pathofexile_x64.exe
-    - rocketleague.exe
+  3: chrome.exe
   4: discord.exe
 
 # set this to true if you want the controls inverted (i.e. top is 0%, bottom is 100%)
